[FEAT] Vista para el inicio de sesion
Se creo la vista para el inicio de sesion y se validaron sus campos

HU-Interfaz para el inicio de sesión.

--- a/src/app/ui/components/signin/signin.component.html
+++ b/src/app/ui/components/signin/signin.component.html
@@ -1,1 +1,59 @@
-<p>signin works!</p>
+<div class="signin">
+  <div class="signin-content">
+    <h2>Iniciar Sesión</h2>
+
+    <form>
+      <div class="form-group">
+        <input
+          type="email"
+          placeholder="Correo"
+          name="email"
+          pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+          required
+          ngModel
+          #email="ngModel"
+          [class.invalid]="email.invalid && email.touched"
+          [class.valid]="email.valid"
+        />
+        <div class="message-error" *ngIf="!email.value && email.touched">
+          El correo es requerido.
+        </div>
+        <div
+          class="message-error"
+          *ngIf="email.value && email.invalid && email.touched"
+        >
+          El correo es invalido
+        </div>
+      </div>
+      <div class="form-group">
+        <input
+          type="password"
+          placeholder="Contraseña"
+          name="password"
+          minlength="6"
+          required
+          ngModel
+          #password="ngModel"
+          [class.invalid]="password.invalid && password.touched"
+          [class.valid]="password.valid"
+        />
+        <div class="message-error" *ngIf="!password.value && password.touched">
+          La contraseña es requerida.
+        </div>
+        <div
+          class="message-error"
+          *ngIf="password.value && password.invalid && password.touched"
+        >
+          La contraseña debe tener al menos 6 caracteres.
+        </div>
+      </div>
+      <button
+        class="btn-general"
+        type="submit"
+        [class.disabled]="email.invalid || password.invalid"
+      >
+        Iniciar
+      </button>
+    </form>
+  </div>
+</div>
