--- a/src/app/ui/styles/_colors.scss
+++ b/src/app/ui/styles/_colors.scss
@@ -1,6 +1,6 @@
 $primary: #fdfdfd;
-$secondary: #f5f5f5;
-$tertiary: #cbcbcb;
+$secondary: #f1f1f1;
+$tertiary: #ececec;
 $blue: #15187e;
 $blue-1: #0f7ae5;
 $blue-2: #0766c5;
@@ -10,3 +10,7 @@ $red-1: #e01818;
 $red-2: #b20202;
 $white: #fff;
 $black: #222;
+$errors: #f01010;
+$success: #3df010;
+
+$box-shadow: 5px 5px 10px rgba($black, 0.6);
