--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,14 +60,14 @@ ul {
 }
 
 .btn-general {
-  background-color: styles.$color-blue-1;
+  background-color: styles.$color-blue-3;
   border: none;
   border-radius: 5px;
   color: styles.$color-white;
   cursor: pointer;
   font-size: 1.25rem;
   position: relative;
-  padding: styles.$box-pad-half styles.$box-pad-onehalf;
+  padding: styles.$box-pad-quarter styles.$box-pad-onehalf;
   transition: styles.$animation-bezier;
   z-index: styles.$box-z-5;
 
@@ -91,4 +91,9 @@ ul {
       @include styles.animation-scale-in_X;
     }
   }
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.5;
 }
