[FEAT] Componente navbar
Se creo el menu de navegacion de la aplicacion

HU-Componentes compartidos.

--- a/src/app/ui/styles/_animations.scss
+++ b/src/app/ui/styles/_animations.scss
@@ -27,6 +27,19 @@ $bezier-navbar: all 0.6s cubic-bezier(0.17, 0.67, 0.8, 0.62);
   }
 }
 
+@mixin scale-out_XY {
+  animation: scale-out_XY 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@keyframes scale-out_XY {
+  0% {
+    transform: scaleX(1) scaleY(1);
+  }
+  100% {
+    transform: scaleX(0) scaleY(0);
+  }
+}
+
 @mixin loading-circle {
   animation: loading-circle 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) infinite;
 }
