--- a/src/app/ui/styles/_colors.scss
+++ b/src/app/ui/styles/_colors.scss
@@ -14,3 +14,4 @@ $errors: #f01010;
 $success: #3df010;
 
 $box-shadow: 5px 5px 10px rgba($black, 0.6);
+$box-shadow-secondary: 6px 6px 5px rgba($black, 0.6);
