[FEAT] Mejoras en el footer
Se mejoro los estilos para el footer

HU-Componentes compartidos.

--- a/src/app/ui/shared/footer/footer.component.html
+++ b/src/app/ui/shared/footer/footer.component.html
@@ -1,115 +1,38 @@
-<footer>
-  <div class="footer-gray">
-    <div class="footer-custom">
-      <div class="footer-lists">
-        <div class="footer-list-wrap">
-          <h6 class="ftr-hdr">Duke's</h6>
-          <ul class="ftr-links-sub">
-            <li>
-              <a href="/help/international-shipping.html" rel="nofollow"
-                >International Orders</a
-              >
-            </li>
-            <li><a href="/~/egift-cards/" rel="nofollow">Gift Cards</a></li>
-            <li><a href="/help/faq.html" rel="nofollow">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="footer-list-wrap">
-          <h6 class="ftr-hdr">Conócenos</h6>
-          <ul class="ftr-links-sub">
-            <li>
-              <a href="/asp/aboutus/default-asp/_/posters.htm" rel="nofollow"
-                >Andrés Castañeda</a
-              >
-            </li>
-            <li>
-              <a href="http://corporate.art.com/careers" rel="nofollow"
-                >Doris Marquez</a
-              >
-            </li>
-            <li>
-              <a href="/asp/landing/artistrising" rel="nofollow"
-                >Juan Pablo Toro</a
-              >
-            </li>
-            <li>
-              <a href="/~/art-for-business" rel="nofollow"
-                >Juan Fernando Vargas</a
-              >
-            </li>
-            <li>
-              <a href="http://affiliates.art.com/index.aspx" rel="nofollow"
-                >Santiago Viana</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="footer-social">
-          <h6 class="ftr-hdr">Contáctanos</h6>
-          <ul>
-            <li>
-              <a href="https://www.facebook.com/art.com" title="Facebook">
-                <img
-                  width="24"
-                  height="24"
-                  alt="Like us on Facebook"
-                  src="http://cache1.artprintimages.com/images/jump_pages/rebrand/footer/fb.png"
-                />
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://plus.google.com/108089796661280870153"
-                title="Google+"
-              >
-                <img
-                  width="24"
-                  height="24"
-                  alt="Follow us on Google+"
-                  src="http://cache1.artprintimages.com/images/jump_pages/rebrand/footer/gplus.png"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="https://pinterest.com/artdotcom/" target="_blank">
-                <img
-                  width="24"
-                  height="24"
-                  alt="Follow us on Pinterest"
-                  src="http://cache1.artprintimages.com/images/jump_pages/rebrand/footer/pin-badge.png"
-                />
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="http://instagram.com/artdotcom/">
-                <img
-                  width="24"
-                  height="24"
-                  alt="Follow us on Instagram"
-                  src="http://cache1.artprintimages.com/images/jump_pages/rebrand/footer/instagram-badge.png"
-                />
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div>
-        <img
-          src="../../../../assets/logo.svg"
-          id="logo"
-          width="200"
-          height="320"
-        />
-      </div>
-      <div class="footer-legal">
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-content_logo">
+      <img src="./assets/logo.svg" alt="Logo de la aplicacion" />
+    </div>
+    <div class="footer-content_rows">
+      <div class="footer-content_rows-item">
+        <h3>Nosotros</h3>
         <p>
-          &copy; Art.com Inc. All Rights Reserved. |
-          <a href="/help/privacy-policy.html" rel="nofollow">Privacy Policy</a>
-          |
-          <a href="/help/terms-of-use.html" rel="nofollow">Terms of Use</a> |
-          <a href="/help/terms-of-sale.html" rel="nofollow">Terms of Sale</a>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio velit
+          pariatur repellendus fugiat fuga veniam? Quam dignissimos perspiciatis
+          voluptates vitae.
         </p>
       </div>
+      <div class="footer-content_rows-item">
+        <h3>Creadores</h3>
+        <ul>
+          <li><a href="" target="_blank">Doris Mosquera</a></li>
+          <li><a href="" target="_blank">Santiago Viana</a></li>
+          <li><a href="" target="_blank">Andres Castañada</a></li>
+          <li><a href="" target="_blank">Juan Pablo Toro</a></li>
+          <li><a href="" target="_blank">Juan Fernando Vargas</a></li>
+        </ul>
+      </div>
+      <div class="footer-content_rows-item">
+        <h3>Nuestras redes</h3>
+        <div class="footer-content_rows-item_social-networks">
+          <i class="fab fa-github"></i>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram-square"></i>
+        </div>
+      </div>
+    </div>
+    <div class="footer-content_copy">
+      &copy; Art.com Inc. All Rights Reserved.
     </div>
   </div>
 </footer>
