--- a/src/app/ui/shared/navbar/navbar.component.scss
+++ b/src/app/ui/shared/navbar/navbar.component.scss
@@ -179,7 +179,7 @@
         }
       }
 
-      @media (max-width: styles.$bkp-desktop-w) {
+      @media (max-width: styles.$bkp-tablet-w) {
         flex-direction: column;
 
         .photo {
