--- a/src/app/ui/shared/footer/footer.component.scss
+++ b/src/app/ui/shared/footer/footer.component.scss
@@ -4,7 +4,7 @@
   background-color: styles.$color-secondary;
   border-top: 5px solid styles.$color-blue;
   bottom: 0;
-  position: absolute;
+  position: relative;
   width: 100vw;
 
   &-content {
