--- a/src/app/ui/components/signin/signin.component.html
+++ b/src/app/ui/components/signin/signin.component.html
@@ -48,7 +48,7 @@
         </div>
       </div>
       <button
-        class="btn-general"
+        class="btn-general-form"
         type="submit"
         [class.disabled]="email.invalid || password.invalid"
       >
