--- a/src/app/ui/shared/navbar/navbar.component.html
+++ b/src/app/ui/shared/navbar/navbar.component.html
@@ -15,9 +15,8 @@
         <img src="./assets/ifuwp.jpg" alt="username" />
       </div>
       <span>Username</span> <span class="sp">|</span>
-      <span class="rol"
-        >Rol
-        <i class="fas fa-angle-down" (click)="showAndHideOptions($event)"></i
+      <span class="rol" (click)="showAndHideOptions($event)"
+        >Rol <i class="fas fa-angle-down"></i
       ></span>
 
       <ul class="options" id="options">
