[FEAT] Configuracion de firebase
Se inicializo firebase en la aplicacion para poder usar sus servicios

HU-Registo de usuarios.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,7 @@ form {
       border: none;
       font-size: 1.1rem;
       outline: 2px solid transparent;
-      padding: styles.$box-pad-quarter styles.$box-pad-half;
+      padding: styles.$box-pad-half;
       transition: styles.$animation-bezier;
       width: 100%;
 
