--- a/src/app/ui/shared/navbar/navbar.component.scss
+++ b/src/app/ui/shared/navbar/navbar.component.scss
@@ -100,6 +100,7 @@
         cursor: pointer;
 
         i {
+          pointer-events: none;
           transition: styles.$animation-bezier;
         }
 
