--- a/src/app/ui/tabs/create-user/create-user.component.html
+++ b/src/app/ui/tabs/create-user/create-user.component.html
@@ -1,6 +1,10 @@
 <div class="create-user">
   <div class="create-user_content">
-    <form #signUpForm="ngForm" autocomplete="off">
+    <form
+      autocomplete="off"
+      #signUpForm="ngForm"
+      (ngSubmit)="onSubmit(signUpForm)"
+    >
       <div class="form-group">
         <input
           type="text"
