--- a/src/app/ui/components/signin/signin.component.html
+++ b/src/app/ui/components/signin/signin.component.html
@@ -2,7 +2,7 @@
   <div class="signin-content">
     <h2>Iniciar Sesión</h2>
 
-    <form>
+    <form #signInForm="ngForm" (ngSubmit)="onSubmit(signInForm)">
       <div class="form-group">
         <input
           type="email"
