--- a/src/app/ui/shared/navbar/navbar.component.html
+++ b/src/app/ui/shared/navbar/navbar.component.html
@@ -30,7 +30,11 @@
         <li><i class="fas fa-user-cog"></i> Admin</li>
       </ul>
     </div>
-    <li class="navbar-public_navigation-item" [routerLink]="['/auth/signin']">
+    <li
+      class="navbar-public_navigation-item"
+      (click)="logout()"
+      [routerLink]="['/']"
+    >
       Cerrar Sesión
     </li>
   </ul>
