--- a/src/app/ui/shared/navbar/navbar.component.html
+++ b/src/app/ui/shared/navbar/navbar.component.html
@@ -30,11 +30,7 @@
         <li><i class="fas fa-user-cog"></i> Admin</li>
       </ul>
     </div>
-    <li
-      class="navbar-public_navigation-item"
-      (click)="logout()"
-      [routerLink]="['/']"
-    >
+    <li class="navbar-public_navigation-item" (click)="logout()">
       Cerrar Sesión
     </li>
   </ul>
