[FEAT] Componente forgot-password
Se creó el componente forgot-password para recuperar la contraseñas

HU-Verificación de correo electrónico.

--- a/src/app/ui/components/signin/signin.component.html
+++ b/src/app/ui/components/signin/signin.component.html
@@ -55,5 +55,8 @@
         Iniciar
       </button>
     </form>
+    <div class="auth-footer">
+      <a (click)="redirect('forgot-password')">¿Olvidaste tu contraseña?</a>
+    </div>
   </div>
 </div>
