[FIX] Solucion de errores en la vista para recuperar contraseña
Se soluciono un error de estilos en la vista para recuperar contraseñas y se realizaron mejoras en las notificaciones de la aplicacion

--- a/src/app/ui/components/forgot-password/forgot-password.component.html
+++ b/src/app/ui/components/forgot-password/forgot-password.component.html
@@ -1,8 +1,11 @@
-<div class="auth">
-  <div class="auth-content">
+<div class="signin">
+  <div class="signin-content">
     <h2>Recuperar Contraseña</h2>
     <p>Ingresa tu correo electrónico para recuperar tu contraseña.</p>
-    <form #signInForm="ngForm" (ngSubmit)="sendEmail(signInForm)">
+    <form
+      #forgotPasswordForm="ngForm"
+      (ngSubmit)="onSubmit(forgotPasswordForm)"
+    >
       <div class="form-group">
         <input
           type="email"
@@ -30,12 +33,12 @@
         type="submmit"
         [class.disabled]="email.invalid"
       >
-        Iniciar
+        Enviar correo
       </button>
     </form>
-    <div class="auth-footer">
-      ¿Quieres regresar?
-      <a (click)="redirect('auth/signin')"> ir a iniciar sesión </a>
+    <div class="form-footer">
+      <p>¿Quieres regresar?</p>
+      <a [routerLink]="'/'"> ir al inicio de sesión.</a>
     </div>
   </div>
 </div>
