--- a/src/app/ui/components/signin/signin.component.html
+++ b/src/app/ui/components/signin/signin.component.html
@@ -55,8 +55,8 @@
         Iniciar
       </button>
     </form>
-    <div class="auth-footer">
-      <a (click)="redirect('forgot-password')">¿Olvidaste tu contraseña?</a>
+    <div class="form-footer">
+      <a [routerLink]="'forgot-password'">¿Olvidaste tu contraseña?</a>
     </div>
   </div>
 </div>
