--- a/src/app/ui/components/root/root.component.html
+++ b/src/app/ui/components/root/root.component.html
@@ -2,8 +2,8 @@
   <div class="root-content">
     <h2>Panel De Usuario Root</h2>
 
-    <div class="root-content_tabs">
-      <div class="root-content_tabs-indicators">
+    <div class="tabs">
+      <div class="tabs-indicators">
         <button
           class="btn-general"
           *ngFor="let indicator of indicators"
@@ -13,19 +13,13 @@
           {{ indicator }}
         </button>
       </div>
-      <div
-        class="root-content_tabs-tab"
-        *ngIf="selected === 'Lista De Usuarios'"
-      >
+      <div class="tabs-tab" *ngIf="selected === 'Lista De Usuarios'">
         <dukes-list-user></dukes-list-user>
       </div>
-      <div class="root-content_tabs-tab" *ngIf="selected === 'Crear Usuario'">
+      <div class="tabs-tab" *ngIf="selected === 'Crear Usuario'">
         <dukes-create-user></dukes-create-user>
       </div>
-      <div
-        class="root-content_tabs-tab"
-        *ngIf="selected === 'Lista De Programas'"
-      >
+      <div class="tabs-tab" *ngIf="selected === 'Lista De Programas'">
         <dukes-list-program></dukes-list-program>
       </div>
     </div>
