[FEAT] Mostrar nombre y foto del usuario logueado
Se implementa la captura del nombre y foto del usuario logueado en la aplicación, y se muestra en la pantalla

--- a/src/app/ui/components/verification/verification.component.html
+++ b/src/app/ui/components/verification/verification.component.html
@@ -1,7 +1,7 @@
 <div class="verification">
   <div class="verification-content">
     <div class="verification-content_header">
-      <h2>Bienvenido Username</h2>
+      <h2>Bienvenido {{ userInfo }}</h2>
       <h3>Gracias por registrarte con nosotros.</h3>
     </div>
     <div class="verification-content_body">
