[DOCS] Documentación de la aplicacion
Se documenta nltodos los archivos de la aplicación

--- a/src/app/ui/components/forgot-password/forgot-password.component.html
+++ b/src/app/ui/components/forgot-password/forgot-password.component.html
@@ -25,7 +25,7 @@
           class="message-error"
           *ngIf="email.value && email.invalid && email.touched"
         >
-          El correo es invalido
+          El correo es inválido
         </div>
       </div>
       <button
