--- a/src/app/ui/components/root/root.component.html
+++ b/src/app/ui/components/root/root.component.html
@@ -1,6 +1,6 @@
 <div class="root">
   <div class="root-content">
-    <h2>Panel De Usuario Root</h2>
+    <h2>Panel Usuario Root</h2>
 
     <div class="tabs">
       <div class="tabs-indicators">
