--- a/src/app/ui/components/verification/verification.component.html
+++ b/src/app/ui/components/verification/verification.component.html
@@ -18,24 +18,24 @@
         </p>
         <p>
           Ten en cuenta que si no has abres el enlace de confirmación y
-          presionas el botón de verificar solo se te redireccionara de nuevo a
+          presionas el botón de verificar sólo se te redireccionará de nuevo a
           esta página.
         </p>
         <p>
           Si no encuentras el correo de verificación en tu bandeja de entrada
-          revisa en la bandeja de correos no deseados (spam) si tampoco esta
-          allí entonces puedes presionar en el botón de reenviar para volver a
+          revisa en la bandeja de correos no deseados (spam) si tampoco está
+          allí, entonces puedes presionar en el botón de reenviar para volver a
           enviar el correo de verificación.
         </p>
         <p>
           Si no puedes validar tu correo en estos momentos puedes cerrar sesión
-          y regresar mas tarde cuando puedas verificarlo.
+          y regresar más tarde cuando puedas verificarlo.
         </p>
       </div>
       <div class="verification-content_body-buttons">
         <button class="btn-general" (click)="sendMail()">Reenviar</button>
         <button class="btn-general" (click)="verify()">Verificar</button>
-        <button class="btn-general" (click)="logout()">Cerrar Sesion</button>
+        <button class="btn-general" (click)="logout()">Cerrar Sesión</button>
       </div>
     </div>
   </div>
