--- a/src/app/ui/shared/footer/footer.component.html
+++ b/src/app/ui/shared/footer/footer.component.html
@@ -1,15 +1,14 @@
 <footer class="footer">
   <div class="footer-content">
     <div class="footer-content_logo">
-      <img src="./assets/logo.svg" alt="Logo de la aplicacion" />
+      <img src="./assets/logo.svg" alt="Logo de la aplicacion"/>
     </div>
     <div class="footer-content_rows">
       <div class="footer-content_rows-item">
         <h3>Nosotros</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio velit
-          pariatur repellendus fugiat fuga veniam? Quam dignissimos perspiciatis
-          voluptates vitae.
+          Creamos soluciones en beneficio de nuestra sociedad, aplicando conocimientos y habilidades adquiridas,
+          buscando siempre el aprendizaje continuo que satisface las necesidades de nuestros clientes.
         </p>
       </div>
       <div class="footer-content_rows-item">
@@ -17,13 +16,13 @@
         <ul>
           <li><a href="" target="_blank">Doris Mosquera</a></li>
           <li><a href="" target="_blank">Santiago Viana</a></li>
-          <li><a href="" target="_blank">Andres Castañada</a></li>
+          <li><a href="" target="_blank">Andrés Castañada</a></li>
           <li><a href="" target="_blank">Juan Pablo Toro</a></li>
           <li><a href="" target="_blank">Juan Fernando Vargas</a></li>
         </ul>
       </div>
       <div class="footer-content_rows-item">
-        <h3>Nuestras redes</h3>
+        <h3>Nuestras Redes</h3>
         <div class="footer-content_rows-item_social-networks">
           <i class="fab fa-github"></i>
           <i class="fab fa-facebook"></i>
