--- a/src/app/ui/shared/navbar/navbar.component.html
+++ b/src/app/ui/shared/navbar/navbar.component.html
@@ -20,12 +20,12 @@
       ></span>
 
       <ul class="options" id="options">
-        <!-- User -->
+        <!-- Usuario -->
         <li><i class="fas fa-address-card"></i> Mi información</li>
-        <!-- User -->
+        <!-- Usuario -->
         <li><i class="fas fa-tasks"></i> Mi progreso</li>
-        <!-- Super -->
-        <li><i class="fas fa-users-cog"></i> Super admin</li>
+        <!-- Super Admin - Root -->
+        <li><i class="fas fa-users-cog"></i> Super Admin</li>
         <!-- Admin -->
         <li><i class="fas fa-user-cog"></i> Admin</li>
       </ul>
