--- a/src/app/ui/styles/index.scss
+++ b/src/app/ui/styles/index.scss
@@ -1,4 +1,5 @@
-// The @forward rule loads a Sass style sheet and makes its joins, functions, and variables available when your style sheet is loaded with the @use rule.
+//La regla @forward carga una hoja de estilo Sass y hace que sus uniones, funciones y variables estén
+// disponibles cuando su hoja de estilo se carga con la regla @use.
 @forward "./animations" as animation-*;
 @forward "./box" as box-*;
 @forward "./break-points" as bkp-*;
