--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-// Import of combinations, functions and general variables of the application.
+// Importación de combinaciones, funciones y variables generales de la aplicación.
 @use "./app/ui/styles/index.scss" as styles;
 
-// General styles.
+// Estilos Generales.
 * {
   box-sizing: border-box;
   list-style: none;
