--- a/src/app/ui/styles/_fonts.scss
+++ b/src/app/ui/styles/_fonts.scss
@@ -3,7 +3,7 @@
 @use "./box" as box;
 @use "./function" as func;
 
-// Fonts import.
+// Importación Fuentes.
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
