[FIX] Correcion de error con firestore
Se soluciono un bug que no permitia crear documentos con id y que inicializaba dos veces la configuracion de firebase

HU-Almacenamiento de datos de usuario.

--- a/src/app/ui/shared/navbar/navbar.component.scss
+++ b/src/app/ui/shared/navbar/navbar.component.scss
@@ -133,6 +133,7 @@
           position: relative;
           padding: styles.$box-pad-half styles.$box-pad-base;
           text-transform: capitalize;
+          white-space: nowrap;
 
           i {
             color: styles.$color-blue;
