[FIX] Correción en la carga de los datos en la tabla
Se corrige la manera en como se estaban mostrando los datos en la tabla

--- a/src/app/ui/tabs/table-progress/table-progress.component.html
+++ b/src/app/ui/tabs/table-progress/table-progress.component.html
@@ -1,15 +1,15 @@
 <h3>Este es tu progreso: </h3>
 <div class="container">
-  <div >
+
     <table class="table-progress">
       <tr>
         <th *ngFor="let label of labels">{{ label }}</th>
       </tr>
-      <tr *ngFor="let d of data">
+      <tr style="align-content: center; justify-content: center">
         <td *ngFor="let label of labels; let i = index">
           {{ data[i] }}
         </td>
       </tr>
     </table>
-  </div>
+
 </div>
